knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/Account__x.object-meta.xml
<CustomObject>
    <externalDataSource>CORP_Org</externalDataSource>
    <externalName>Account</externalName>
    <label>Account / Hospital</label>
    <pluralLabel>Accounts / Hospitals</pluralLabel>
</CustomObject>