knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Accepts_Residents_for_Moonlighting_c__c.field-meta.xml
<CustomField>
    <fullName>Accepts_Residents_for_Moonlighting_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Accepts_Residents_for_Moonlighting__c</externalDeveloperName>
    <label>Accepts Residents for Moonlighting</label>
    <type>Checkbox</type>
</CustomField>