knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Account_Marketing_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Account_Marketing_Status_c__c</fullName>
    <externalDeveloperName>Account_Marketing_Status__c</externalDeveloperName>
    <label>Account Marketing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>