knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/AccountSource__c.field-meta.xml
<CustomField>
    <fullName>AccountSource__c</fullName>
    <externalDeveloperName>AccountSource</externalDeveloperName>
    <label>Account Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>