knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ACH_Pay_Group_c__c.field-meta.xml
<CustomField>
    <fullName>ACH_Pay_Group_c__c</fullName>
    <externalDeveloperName>ACH_Pay_Group__c</externalDeveloperName>
    <label>ACH Pay Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>