knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Active_Duty_c__c.field-meta.xml
<CustomField>
    <fullName>Active_Duty_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Active_Duty__c</externalDeveloperName>
    <label>Active Duty</label>
    <type>Checkbox</type>
</CustomField>