knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Actual_Billable_Volume_c__c.field-meta.xml
<CustomField>
    <fullName>Actual_Billable_Volume_c__c</fullName>
    <externalDeveloperName>Actual_Billable_Volume__c</externalDeveloperName>
    <label>Actual Billable Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>