knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Actual_Facility_Volume_c__c.field-meta.xml
<CustomField>
    <fullName>Actual_Facility_Volume_c__c</fullName>
    <externalDeveloperName>Actual_Facility_Volume__c</externalDeveloperName>
    <label>Actual Facility Volume</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>