knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/AcuteCare_c__c.field-meta.xml
<CustomField>
    <fullName>AcuteCare_c__c</fullName>
    <externalDeveloperName>AcuteCare__c</externalDeveloperName>
    <label>AcuteCare</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>