knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Add_Doc_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Add_Doc_Contact_c__c</fullName>
    <externalDeveloperName>Add_Doc_Contact__c</externalDeveloperName>
    <label>Add Doc Contact</label>
    <length>35</length>
    <type>Text</type>
</CustomField>