knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Add_Doc_Street_c__c.field-meta.xml
<CustomField>
    <fullName>Add_Doc_Street_c__c</fullName>
    <externalDeveloperName>Add_Doc_Street__c</externalDeveloperName>
    <label>Add Doc Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>