knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Add_Doc_Zip_c__c.field-meta.xml
<CustomField>
    <fullName>Add_Doc_Zip_c__c</fullName>
    <externalDeveloperName>Add_Doc_Zip__c</externalDeveloperName>
    <label>Add Doc Zip</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>