knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Additional_Doc_c__c.field-meta.xml
<CustomField>
    <fullName>Additional_Doc_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Additional_Doc__c</externalDeveloperName>
    <label>Additional Doc</label>
    <type>Checkbox</type>
</CustomField>