knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Annual_Discharge_c__c.field-meta.xml
<CustomField>
    <fullName>Annual_Discharge_c__c</fullName>
    <externalDeveloperName>Annual_Discharge__c</externalDeveloperName>
    <label>Annual Discharge</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>