knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Annual_Regular_Subsidy_c__c.field-meta.xml
<CustomField>
    <fullName>Annual_Regular_Subsidy_c__c</fullName>
    <externalDeveloperName>Annual_Regular_Subsidy__c</externalDeveloperName>
    <label>Annual Regular Subsidy</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>