knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Annual_Volume_Protector_c__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume_Protector_c__c</fullName>
    <externalDeveloperName>Annual_Volume_Protector__c</externalDeveloperName>
    <label>Annual Volume Protector</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>