knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Approval_Region_c__c.field-meta.xml
<CustomField>
    <fullName>Approval_Region_c__c</fullName>
    <externalDeveloperName>Approval_Region__c</externalDeveloperName>
    <label>Approval Region</label>
    <type>TextArea</type>
</CustomField>