knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Attestation_Opporunity_c__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Opporunity_c__c</fullName>
    <externalDeveloperName>Attestation_Opporunity__c</externalDeveloperName>
    <label>Attestation Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>