knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Avg_Daily_Census_Inpatient_c__c.field-meta.xml
<CustomField>
    <fullName>Avg_Daily_Census_Inpatient_c__c</fullName>
    <externalDeveloperName>Avg_Daily_Census_Inpatient__c</externalDeveloperName>
    <label>Avg Daily Census - Inpatient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>