knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Avg_Exam_Wait_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Avg_Exam_Wait_Time_c__c</fullName>
    <externalDeveloperName>Avg_Exam_Wait_Time__c</externalDeveloperName>
    <label>Avg Exam Wait Time</label>
    <length>15</length>
    <type>Text</type>
</CustomField>