knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Avg_Monthly_NPPA_Shifts_c__c.field-meta.xml
<CustomField>
    <fullName>Avg_Monthly_NPPA_Shifts_c__c</fullName>
    <externalDeveloperName>Avg_Monthly_NPPA_Shifts__c</externalDeveloperName>
    <label>Avg Monthly NPPA Shifts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>