knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/awduplicate2_AWDisableDuplicateCheck_c__c.field-meta.xml
<CustomField>
    <fullName>awduplicate2_AWDisableDuplicateCheck_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>awduplicate2__AWDisableDuplicateCheck__c</externalDeveloperName>
    <label>Disable Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>