knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Backup_c__c.field-meta.xml
<CustomField>
    <fullName>Backup_c__c</fullName>
    <externalDeveloperName>Backup__c</externalDeveloperName>
    <label>Backup</label>
    <type>TextArea</type>
</CustomField>