knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Base_Pay_c__c.field-meta.xml
<CustomField>
    <fullName>Base_Pay_c__c</fullName>
    <externalDeveloperName>Base_Pay__c</externalDeveloperName>
    <label>(PHY) Blended Hourly</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>