knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Baseline_RVU_c__c.field-meta.xml
<CustomField>
    <fullName>Baseline_RVU_c__c</fullName>
    <externalDeveloperName>Baseline_RVU__c</externalDeveloperName>
    <label>Baseline RVU</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>