knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/BB_Update_Name_c__c.field-meta.xml
<CustomField>
    <fullName>BB_Update_Name_c__c</fullName>
    <externalDeveloperName>BB_Update_Name__c</externalDeveloperName>
    <label>BB Update Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>