knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/BC_BS_c__c.field-meta.xml
<CustomField>
    <fullName>BC_BS_c__c</fullName>
    <externalDeveloperName>BC_BS__c</externalDeveloperName>
    <label>BC/BS %:</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>