knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/BCBS_c__c.field-meta.xml
<CustomField>
    <fullName>BCBS_c__c</fullName>
    <externalDeveloperName>BCBS__c</externalDeveloperName>
    <label>BCBS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>