knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Bill_for_EKG_c__c.field-meta.xml
<CustomField>
    <fullName>Bill_for_EKG_c__c</fullName>
    <externalDeveloperName>Bill_for_EKG__c</externalDeveloperName>
    <label>Bill for EKG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>