knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Billing_Co_Division_c__c.field-meta.xml
<CustomField>
    <fullName>Billing_Co_Division_c__c</fullName>
    <externalDeveloperName>Billing_Co_Division__c</externalDeveloperName>
    <label>Billing Co Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>