knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Billing_Company_c__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company_c__c</fullName>
    <externalDeveloperName>Billing_Company__c</externalDeveloperName>
    <label>Billing Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>