knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Budget_BOB_GM_c__c.field-meta.xml
<CustomField>
    <fullName>Budget_BOB_GM_c__c</fullName>
    <externalDeveloperName>Budget_BOB_GM__c</externalDeveloperName>
    <label>Budget GM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>