knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Budget_Overall_Pt_Per_Hour_c__c.field-meta.xml
<CustomField>
    <fullName>Budget_Overall_Pt_Per_Hour_c__c</fullName>
    <externalDeveloperName>Budget_Overall_Pt_Per_Hour__c</externalDeveloperName>
    <label>Budget Overall Pt. Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>