knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Budget_Responsibility_c__c.field-meta.xml
<CustomField>
    <fullName>Budget_Responsibility_c__c</fullName>
    <externalDeveloperName>Budget_Responsibility__c</externalDeveloperName>
    <label>Budget Responsibility</label>
    <length>18</length>
    <type>Text</type>
</CustomField>