knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Budget_RVU_per_Pt_c__c.field-meta.xml
<CustomField>
    <fullName>Budget_RVU_per_Pt_c__c</fullName>
    <externalDeveloperName>Budget_RVU_per_Pt__c</externalDeveloperName>
    <label>Budget RVU per Pt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>