knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Budget_Vol_Trend_c__c.field-meta.xml
<CustomField>
    <fullName>Budget_Vol_Trend_c__c</fullName>
    <externalDeveloperName>Budget_Vol_Trend__c</externalDeveloperName>
    <label>Budget Vol Trend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>