knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Budget_Volume_c__c.field-meta.xml
<CustomField>
    <fullName>Budget_Volume_c__c</fullName>
    <externalDeveloperName>Budget_Volume__c</externalDeveloperName>
    <label>Budget Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>