knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Cafeteria_Hours_c__c.field-meta.xml
<CustomField>
    <fullName>Cafeteria_Hours_c__c</fullName>
    <externalDeveloperName>Cafeteria_Hours__c</externalDeveloperName>
    <label>Cafeteria Hours</label>
    <length>50</length>
    <type>Text</type>
</CustomField>