knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Caid_Mg_Care_c__c.field-meta.xml
<CustomField>
    <fullName>Caid_Mg_Care_c__c</fullName>
    <externalDeveloperName>Caid_Mg_Care__c</externalDeveloperName>
    <label>Caid Mg.Care %:</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>