knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Care_Mg_Care_c__c.field-meta.xml
<CustomField>
    <fullName>Care_Mg_Care_c__c</fullName>
    <externalDeveloperName>Care_Mg_Care__c</externalDeveloperName>
    <label>Care Mg.Care %:</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>