knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Carrier_c__c.field-meta.xml
<CustomField>
    <fullName>Carrier_c__c</fullName>
    <externalDeveloperName>Carrier__c</externalDeveloperName>
    <label>Carrier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>