knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/CCU_Beds_c__c.field-meta.xml
<CustomField>
    <fullName>CCU_Beds_c__c</fullName>
    <externalDeveloperName>CCU_Beds__c</externalDeveloperName>
    <label>CCU Beds</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>