knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/CEP_Comment_c__c.field-meta.xml
<CustomField>
    <fullName>CEP_Comment_c__c</fullName>
    <externalDeveloperName>CEP_Comment__c</externalDeveloperName>
    <label>CEP Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>