knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/CEP_Group_NPI_ID_c__c.field-meta.xml
<CustomField>
    <fullName>CEP_Group_NPI_ID_c__c</fullName>
    <externalDeveloperName>CEP_Group_NPI_ID__c</externalDeveloperName>
    <label>CEP Group NPI ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>