knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/CEP_Rec_Date_c__c.field-meta.xml
<CustomField>
    <fullName>CEP_Rec_Date_c__c</fullName>
    <externalDeveloperName>CEP_Rec_Date__c</externalDeveloperName>
    <label>CEP Rec Date</label>
    <type>Date</type>
</CustomField>