knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Check_Pay_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Check_Pay_Group_c__c</fullName>
    <externalDeveloperName>Check_Pay_Group__c</externalDeveloperName>
    <label>Check Pay Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>