knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ChildFacOnly_c__c.field-meta.xml
<CustomField>
    <fullName>ChildFacOnly_c__c</fullName>
    <externalDeveloperName>ChildFacOnly__c</externalDeveloperName>
    <label>ChildFacOnly</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>