knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Class_c__c.field-meta.xml
<CustomField>
    <fullName>Class_c__c</fullName>
    <externalDeveloperName>Class__c</externalDeveloperName>
    <label>Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>