knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Client_Start_Up_Time_Zone_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Start_Up_Time_Zone_c__c</fullName>
    <externalDeveloperName>Client_Start_Up_Time_Zone__c</externalDeveloperName>
    <label>Client Start Up Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>