knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Client_Statup_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Client_Statup_Date_c__c</fullName>
    <externalDeveloperName>Client_Statup_Date__c</externalDeveloperName>
    <label>Client Startup Date</label>
    <type>Date</type>
</CustomField>