knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Com_Ins_c__c.field-meta.xml
<CustomField>
    <fullName>Com_Ins_c__c</fullName>
    <externalDeveloperName>Com_Ins__c</externalDeveloperName>
    <label>Com. Ins %:</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>