knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Command_Regulations_c__c.field-meta.xml
<CustomField>
    <fullName>Command_Regulations_c__c</fullName>
    <externalDeveloperName>Command_Regulations__c</externalDeveloperName>
    <label>Command Regulations</label>
    <type>TextArea</type>
</CustomField>