knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Communication_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Communication_Comments_c__c</fullName>
    <externalDeveloperName>Communication_Comments__c</externalDeveloperName>
    <label>Communication Comments</label>
    <type>TextArea</type>
</CustomField>