knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Community_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Community_Comments_c__c</fullName>
    <externalDeveloperName>Community_Comments__c</externalDeveloperName>
    <label>Community Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>