knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Community_Website_1_c__c.field-meta.xml
<CustomField>
    <fullName>Community_Website_1_c__c</fullName>
    <externalDeveloperName>Community_Website_1__c</externalDeveloperName>
    <label>Area Information</label>
    <type>Url</type>
</CustomField>