knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Community_Website_3_c__c.field-meta.xml
<CustomField>
    <fullName>Community_Website_3_c__c</fullName>
    <externalDeveloperName>Community_Website_3__c</externalDeveloperName>
    <label>Unique Features/Events</label>
    <type>Url</type>
</CustomField>