knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Compensation_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Type_c__c</fullName>
    <externalDeveloperName>Compensation_Type__c</externalDeveloperName>
    <label>(PHY) Compensation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>