knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Contract_Active_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Active_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Contract_Active__c</externalDeveloperName>
    <label>Contract Active</label>
    <type>Checkbox</type>
</CustomField>