knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Contract_Termination_c__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination_c__c</fullName>
    <externalDeveloperName>Contract_Termination__c</externalDeveloperName>
    <label>Contract Termination</label>
    <type>Date</type>
</CustomField>