knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Contracting_Method_c__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Method_c__c</fullName>
    <externalDeveloperName>Contracting_Method__c</externalDeveloperName>
    <label>Contracting Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>