knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Core_Measures_Composite_c__c.field-meta.xml
<CustomField>
    <fullName>Core_Measures_Composite_c__c</fullName>
    <externalDeveloperName>Core_Measures_Composite__c</externalDeveloperName>
    <label>Core Measures Composite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>