knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Corp_Entities_c__c.field-meta.xml
<CustomField>
    <fullName>Corp_Entities_c__c</fullName>
    <externalDeveloperName>Corp_Entities__c</externalDeveloperName>
    <label>Corporate Entity</label>
    <length>18</length>
    <type>Text</type>
</CustomField>