knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Corporate_Entity_2_c__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity_2_c__c</fullName>
    <externalDeveloperName>Corporate_Entity_2__c</externalDeveloperName>
    <label>Corporate Entity 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>