knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Cost_Center_c__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_c__c</fullName>
    <externalDeveloperName>Cost_Center__c</externalDeveloperName>
    <label>Cost Center</label>
    <type>TextArea</type>
</CustomField>