knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Cost_User_Year_c__c.field-meta.xml
<CustomField>
    <fullName>Cost_User_Year_c__c</fullName>
    <externalDeveloperName>Cost_User_Year__c</externalDeveloperName>
    <label>Cost/User/Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>