knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/County_c__c.field-meta.xml
<CustomField>
    <fullName>County_c__c</fullName>
    <externalDeveloperName>County__c</externalDeveloperName>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>