knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Coverage_Hour_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Hour_Comments_c__c</fullName>
    <externalDeveloperName>Coverage_Hour_Comments__c</externalDeveloperName>
    <label>Coverage Hour Comments</label>
    <type>TextArea</type>
</CustomField>