knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Coverage_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type_c__c</fullName>
    <externalDeveloperName>Coverage_Type__c</externalDeveloperName>
    <label>(PHY) Coverage Type</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>