knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/CoverageSummary_c__c.field-meta.xml
<CustomField>
    <fullName>CoverageSummary_c__c</fullName>
    <externalDeveloperName>CoverageSummary__c</externalDeveloperName>
    <label>Coverage Summary Pre-Sale</label>
    <type>TextArea</type>
</CustomField>